# scratch

./: README.md
hs/: README.md  scratch.cabal
hs/src/: Main.hs
idr/: .gitignore  Makefile  scratch.ipkg
idr/src/: Scratch.idr
py/: Makefile  README.md  lib.py  lib_test.py  main.py  requirements.txt
