name:                scratch
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/jaseemabid/scratch#readme
license:             BSD3
license-file:        LICENSE
author:              Jaseem Abid
maintainer:          jaseemabid@gmail.com
copyright:           2016 Jaseem Abid
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scratch
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , binary
                     , bytestring
                     , containers
                     , diagrams
                     , free
                     , hlint
                     , hoogle
                     , lens
                     , parsec
                     , process
                     , protolude
                     , vector
